--- a/config/federation/prometheus/prometheus.yml.template
+++ b/config/federation/prometheus/prometheus.yml.template
@@ -284,6 +284,17 @@ scrape_configs:
     static_configs:
       - targets: ['nagios.measurementlab.net:9267']
 
+
+  # Scrape config for the snmp_exporter. There is one snmp_exporter service
+  # running in a Docker container on a GCE VM in each GCP project.
+  #
+  # The snmp_exporter generates its own labels.
+  - job_name: 'snmp-exporter'
+    static_configs:
+      - targets:
+        - snmp-exporter.{{PROJECT}}.measurementlab.net:9116/metrics
+
+
   # Scrape config for federation.
   #
   # The '/federate' target allows retrieving a set of timeseries from other
