--- a/config/federation/prometheus/prometheus.yml.template
+++ b/config/federation/prometheus/prometheus.yml.template
@@ -292,7 +292,7 @@ scrape_configs:
   - job_name: 'snmp-exporter'
     static_configs:
       - targets:
-        - snmp-exporter.{{PROJECT}}.measurementlab.net:9116/metrics
+        - snmp-exporter.{{PROJECT}}.measurementlab.net:9116
 
 
   # Scrape config for federation.
