--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -230,7 +230,7 @@ ALERT DownloaderIsFailingToUpdate
 
 # Prometheus is unable to get data from the snmp_exporter service.
 ALERT SnmpExporterDown
-  IF absent(up{job="snmp-exporter"} == 0)
+  IF up{job="snmp-exporter"} == 0 OR absent(up{job="snmp-exporter"})
   FOR 10m
   LABELS {
     severity = "ticket"
