--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -49,6 +49,7 @@ ALERT SidestreamIsNotRunning
   IF sum_over_time(up{service="sidestream"}[10m]) == 0
         AND ON(machine)
            sum_over_time(probe_success{service="ssh806"}[20m]) / 20 >= 0.90
+        UNLESS ON(machine) lame_duck_node == 1
   FOR 10m
   LABELS {
     severity = "page"
@@ -71,6 +72,7 @@ ALERT ScraperMostRecentArchivedFileTimeIsTooOld
   IF (time() - (scraper_maxrawfiletimearchived{container="scraper-sync"} != 0)) > (36 * 60 * 60)
         AND ON(machine)
            (time() - process_start_time_seconds{service="sidestream"}) > (30 * 60 * 60)
+        UNLESS ON(machine) lame_duck_node == 1
   FOR 10m
   LABELS {
     severity = "page"
