--- a/config/federation/blackbox/config.yml
+++ b/config/federation/blackbox/config.yml
@@ -43,6 +43,14 @@ modules:
         - expect: "SSH-2.0-OpenSSH_.+"
 
   # target=<hostname:port>
+  tcp_v4_tls_online:
+    prober: tcp
+    timeout: 5s
+    tcp:
+      protocol: "tcp4"
+      tls: true
+
+  # target=<hostname:port>
   rsyncd_online:
     prober: tcp
     timeout: 5s
