--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -283,24 +283,30 @@ ALERT SnmpExporterMissingMetrics
   }
 
 # ParserDailyVolumeTooLow: 24 hour test volume has dropped over 30% compared to
-# the 50th quantile 22 hour test volume from 4 days out of the last week.  Two vectors
-# of zeros avoid false alarms when there is little valid history.  The alert condition
-# ignores batch processing and ignores 40% thresholds less than 1.
-# This should typically trigger if the pipeline (or scraper) falls behind by more
-# than 2 hours, or more than 30% of the normal processing volume.
+# the average of the 2 smallest test volumes of 4 days out of the last week.  Two vectors
+# of conservative constant value avoid false alarms when there is little valid history.
+# The left side uses 26 hours, allowing the pipeline to get up to 2 hours behind previous
+# daily progress.
+#
+# In normal operation, the 50th quantile should split mid-way between the two smallest
+# volume days of the 4 sample days.  At least one of these should be a weekend day.
+# For example, for a Tuesday, the prior data might be ordered: M, F, W, Sa, C1, C2,
+# and the 50th quantile will split between previous Sat and previous W.
+#
+# The alert condition ignores batch processing.
 ALERT ParserDailyVolumeTooLow
-  IF sum by(service) (increase(etl_test_count{service!~".*batch.*"}[24h]))
-     < (0.7 * quantile by(service)(0.66,
-         label_replace(sum by(service) (increase(etl_test_count[22h] offset 1d)),"foo","1","","(.*)" ) OR
-         label_replace(sum by(service) (increase(etl_test_count[22h] offset 3d)),"foo","3","","(.*)" ) OR
-         label_replace(sum by(service) (increase(etl_test_count[22h] offset 5d)),"foo","5","","(.*)" ) OR
-         label_replace(sum by(service) (increase(etl_test_count[22h] offset 7d)),"foo","7","","(.*)" ) OR
-         label_replace(label_replace(vector(0),"foo","a","","(.*)" ), "service", "etl-ndt-parser", "", "(.*)") OR
-         label_replace(label_replace(vector(0),"foo","a","","(.*)" ), "service", "etl-sidestream-parser", "", "(.*)") OR
-         label_replace(label_replace(vector(0),"foo","a","","(.*)" ), "service", "etl-traceroute-parser", "", "(.*)") OR
-         label_replace(label_replace(vector(0),"foo","b","","(.*)" ), "service", "etl-ndt-parser", "", "(.*)") OR
-         label_replace(label_replace(vector(0),"foo","b","","(.*)" ), "service", "etl-sidestream-parser", "", "(.*)") OR
-         label_replace(label_replace(vector(0),"foo","b","","(.*)" ), "service", "etl-traceroute-parser", "", "(.*)")
+  IF sum by(service) (increase(etl_test_count{service!~".*batch.*"}[26h]))
+      < (0.7 * quantile by(service)(0.50,
+         label_replace(sum by(service) (increase(etl_test_count[24h] offset 1d)),"delay","1d","",".*" ) OR
+         label_replace(sum by(service) (increase(etl_test_count[24h] offset 3d)),"delay","3d","",".*" ) OR
+         label_replace(sum by(service) (increase(etl_test_count[24h] offset 5d)),"delay","5d","",".*" ) OR
+         label_replace(sum by(service) (increase(etl_test_count[24h] offset 7d)),"delay","7d","",".*" ) OR
+         label_replace(label_replace(vector(500000),"delay","c1","","
+         label_replace(label_replace(vector(500000),"delay","c2","",".*" ), "service", "etl-ndt-parser", "", "(.*)") OR
+         label_replace(label_replace(vector(2000000),"delay","c1","",".*" ), "service", "etl-sidestream-parser", "", ".*") OR
+         label_replace(label_replace(vector(2000000),"delay","c2","",".*" ), "service", "etl-sidestream-parser", "", ".*") OR
+         label_replace(label_replace(vector(2000000),"delay","c1","",".*" ), "service", "etl-traceroute-parser", "", ".*") OR
+         label_replace(label_replace(vector(2000000),"delay","c2","",".*" ), "service", "etl-traceroute-parser", "", ".*")
          ))
   FOR 1h
   LABELS {
