--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -282,13 +282,18 @@ ALERT SnmpExporterMissingMetrics
     dashboard = "http://status.mlab-oti.measurementlab.net:3000/dashboard/db/switch-metrics"
   }
 
+# TODO:
+#   Replace this with two other alerts:
+#    1.  Alert if hourly test volume on servers drops relative to same hour on recent days.
+#    2.  E2E alert that compares rows in tables to test volume on servers.
+#
 # ParserDailyVolumeTooLow: 24 hour test volume has dropped over 30% compared to
 # the average of the 2 smallest test volumes of 4 days out of the last week.  Two vectors
 # of conservative constant value avoid false alarms when there is little valid history.
-# The left side uses 26 hours, allowing the pipeline to get up to 2 hours behind previous
-# daily progress.  This means the left side will typically be about 8% more than the 24 hour
-# average (for smooth processing like NDT) or will have up to twice the daily average during
-# the period when the 26 hour window includes both today's burst and yesterday's burst.
+# On occasion, processing may fall behind a bit.  The "FOR 2h" waits 2h before triggering
+# an actual alert, so the pipeline may fall behind for up to 2 hours without alerting.
+# However, if the pipeline falls several hours behind, and stays behind for more than 
+# 2 hours, the alert will fire.
 #
 # In normal operation, we expect the 50th quantile to split mid-way between the two smallest
 # volume days of the 4 sample days.  The 4 sample always include one weekend day, so one of
@@ -309,7 +314,7 @@ ALERT SnmpExporterMissingMetrics
 # For each pipeline service, the quantile computation then aggregates across the 6 vectors in
 # the delay dimension.
 ALERT ParserDailyVolumeTooLow
-  IF sum by(service) (increase(etl_test_count{service!~".*batch.*"}[26h]))
+  IF sum by(service) (increase(etl_test_count{service!~".*batch.*"}[24h]))
       < (0.7 * quantile by(service)(0.50,
          label_replace(sum by(service) (increase(etl_test_count{service!~".*batch.*"}[24h] offset 1d)),"delay","1d","",".*" ) OR
          label_replace(sum by(service) (increase(etl_test_count{service!~".*batch.*"}[24h] offset 3d)),"delay","3d","",".*" ) OR
@@ -322,12 +327,12 @@ ALERT ParserDailyVolumeTooLow
          label_replace(label_replace(vector(2000000),"delay","c1","",".*" ), "service", "etl-traceroute-parser", "", ".*") OR
          label_replace(label_replace(vector(2000000),"delay","c2","",".*" ), "service", "etl-traceroute-parser", "", ".*")
          ))
-  FOR 1h
+  FOR 2h
   LABELS {
     severity = "page"
   }
   ANNOTATIONS {
-    summary = "Today's test volume is less than 20% of yesterday's volume.",
+    summary = "Today's test volume is less than 70% of nominal daily volume.",
     hints = "Are machines online? Is data being collected? Is the parser working?",
     url = "http://status.mlab-oti.measurementlab.net:3000/dashboard/db/parserdailyvolumetoolow"
   }
