--- a/k8s/scraper-cluster/mlab-staging.yml
+++ b/k8s/scraper-cluster/mlab-staging.yml
@@ -1,5 +1,5 @@
 # Configuration values for mlab-staging.
 
-PROMETHEUS_RAM: 96Gi
+PROMETHEUS_RAM: 96G
 PROMETHEUS_CPU: 8000m
 PROMETHEUS_VOLUME_NAME: auto-prometheus-ssd0
