--- a/config/federation/prometheus/prometheus.yml.template
+++ b/config/federation/prometheus/prometheus.yml.template
@@ -293,16 +293,6 @@ scrape_configs:
       - targets: ['nagios-oam.measurementlab.net:9267']
 
 
-  # Scrape config for the snmp_exporter. There is one snmp_exporter service
-  # running in a Docker container on a GCE VM in each GCP project.
-  #
-  # The snmp_exporter generates its own labels.
-  - job_name: 'snmp-exporter'
-    static_configs:
-      - targets:
-        - snmp-exporter.{{PROJECT}}.measurementlab.net:9116
-
-
   # Scrape config for federation.
   #
   # The '/federate' target allows retrieving a set of timeseries from other
@@ -390,6 +380,18 @@ scrape_configs:
         target_label: __address__
         replacement: blackbox-public-service.default.svc.cluster.local:9115
 
+
+  # Scrape config for the snmp_exporter. There is one snmp_exporter service
+  # running in a Docker container on a GCE VM in each GCP project.
+  #
+  # The snmp_exporter generates its own labels.
+  - job_name: 'snmp-exporter'
+    static_configs:
+      - targets:
+        - snmp-exporter.{{PROJECT}}.measurementlab.net:9116
+        - snmp-exporter.{{PROJECT}}.measurementlab.net:9100
+
+
   # SNMP configurations.
   - job_name: 'snmp-targets'
     metrics_path: /snmp
@@ -442,6 +444,17 @@ scrape_configs:
         regex: (uplink)-.*
         target_label: ifAlias
         replacement: ${1}
+
+
+  # Scrape config for the script_exporter. There is one script_exporter service
+  # running in a Docker container on a GCE VM in each GCP project.
+  #
+  # The script_exporter generates its own labels.
+  - job_name: 'script-exporter'
+    static_configs:
+      - targets:
+        - script-exporter.{{PROJECT}}.measurementlab.net:9172
+        - script-exporter.{{PROJECT}}.measurementlab.net:9100
 
 
   # script_exporter configurations. The scrape_timeout is set very high because
