--- a/config/federation/prometheus/alerts.yml
+++ b/config/federation/prometheus/alerts.yml
@@ -282,6 +282,19 @@ ALERT SnmpExporterMissingMetrics
     dashboard = "http://status.mlab-oti.measurementlab.net:3000/dashboard/db/switch-metrics"
   }
 
+# Prometheus is unable to scrape SNMP data from a switch.
+# Note: ignores testing pod switches.
+ALERT SnmpScrapingFailing
+  IF sum_over_time(up{job="snmp-targets", site!~".*t"}[15m]) == 0
+  FOR 15m
+  LABELS {
+    severity = "page"
+  }
+  ANNOTATIONS {
+    summary = "Scraping SNMP data from a switch is failing.",
+    hints = "Did the SNMP community string change on the switch? The snmp_exporter may be running with an old config. Check that the switch-config submodule is up-to-date in the m-lab/prometheus-snmp-exporter repo",
+  }
+
 # Prometheus is unable to get data from the script_exporter service.
 ALERT ScriptExporterDownOrMissing
   IF up{job="script-exporter"} == 0 OR absent(up{job="script-exporter"})
