Adds a new BB exporter to check ssh806 over IPv6, and updates URIs for gce-service-discovery.

--- a/config/federation/blackbox/config.yml
+++ b/config/federation/blackbox/config.yml
@@ -40,12 +40,21 @@ modules:
     tcp:
       preferred_ip_protocol: "ip6"
 
-  # target=<hostname:port>
+  # IPv4 target=<hostname:port>
   ssh_v4_online:
     prober: tcp
     timeout: 9s
     tcp:
       preferred_ip_protocol: "ip4"
+      query_response:
+        - expect: "SSH-2.0-OpenSSH_.+"
+
+  # IPv6 target=<hostname:port>
+  ssh_v6_online:
+    prober: tcp
+    timeout: 9s
+    tcp:
+      preferred_ip_protocol: "ip6"
       query_response:
         - expect: "SSH-2.0-OpenSSH_.+"
 
